fixed the editing gift code part and updated login link

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       </div>
       <div class="nav-buttons">
         <a
-          href="https://www.6diuwin.com/#/register?invitationCode=2524110752506"
+          href="https://www.diuwin1.co/#/register?invitationCode=2524110752506"
           class="btn btn-login"
           >Log In</a
         >
         <a
-          href="https://www.6diuwin.com/#/register?invitationCode=2524110752506"
+          href="https://www.diuwin1.co/#/register?invitationCode=2524110752506"
           class="btn btn-register"
           >Register</a
         >
@@ -43,7 +43,7 @@
 
         <div class="button-group">
           <a
-            href="https://www.6diuwin.com/#/register?invitationCode=2524110752506"
+            href="https://www.diuwin1.co/#/register?invitationCode=2524110752506"
             class="btn btn-register-large"
             >Register Now</a
           >
@@ -51,7 +51,7 @@
 
         <div class="button-group">
           <a
-            href="https://www.6diuwin.com/#/register?invitationCode=2524110752506"
+            href="https://www.diuwin1.co/#/register?invitationCode=2524110752506"
             class="btn btn-login-alt"
             >Login Now</a
           >
